--- a/.github/workflows/xlog.yml
+++ b/.github/workflows/xlog.yml
@@ -47,7 +47,7 @@ jobs:
           chmod -R 0777 .
 
       - name: Upload GitHub Pages artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v2.0.0
         with:
           path: .
 
@@ -58,6 +58,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages1
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v3
