--- a/.github/workflows/xlog.yml
+++ b/.github/workflows/xlog.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           xlog \
           --build . \
-          --sitename "wiki"
+          --sitename "blackgwe"
           rm *.md
           chmod -R 0777 .
 
